- tycho build for integration test no longer fails to compile - removed obsolete project natures - added test runtime dependencies to master pom - added sonar nature to projects (see http://bit.ly/LuGEjh) - status: test now actually run, but fail